--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "description": "A Homebridge plugin with GPIO support",
     "license": "ISC",
     "keywords": [
-        "homebridge-plugin"
-    ],
+        "homebridge-plugin",
+        "homebridge",
+        "homebridge-mailbox",
+        "gipo",
+        "raspberry",
+        "raspberry-pi"
+      ],
     "engines": {
         "node": ">=0.12.0",
         "homebridge": ">=0.2.0"
