--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
         "gipo",
         "raspberry",
         "raspberry-pi"
-      ],
+    ],
     "engines": {
         "node": ">=0.12.0",
         "homebridge": ">=0.2.0"
     },
     "dependencies": {
         "onoff": "^3.1.0"
+    },
+    "devDependencies": {
+        "eslint": "^3.19.0",
+        "eslint-config-airbnb": "^11.1.0",
+        "eslint-plugin-import": "^1.15.0",
+        "eslint-plugin-jsx-a11y": "^2.2.2",
+        "eslint-plugin-react": "^6.3.0",
+        "eslint-loader": "^1.6.1"
+    },
+    "scripts": {
+        "lint": "eslint index.js"
     },
     "repository": {
         "type": "git",
