--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "engines": {
         "node": ">=0.12.0",
         "homebridge": ">=0.2.0"
-    },    
+    },
+    "dependencies": {
+        "mqtt": "^4.3.4"
+	},    
     "devDependencies": {
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^11.1.0",
